force-app/main/default/objects/Scope_3_Emission_Factor__c/Scope_3_Emission_Factor__c.object-meta.xml
<CustomObject>
    <label>Scope 3 Emission Factor</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scope 3 Emission Factors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>