force-app/main/default/objects/Scope_3_Emission_Factor__c/fields/Car_Size__c.field-meta.xml
<CustomField>
    <fullName>Car_Size__c</fullName>
    <label>Car Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Average Car</fullName>
                <default>true</default>
                <label>Average Car</label>
            </value>
            <value>
                <fullName>Large Car</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>