force-app/main/default/objects/Scope_3_Emission_Factor__c/fields/Class_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Class_of_Service__c</fullName>
    <description>AJ: Created for NZC Implementation, This field is created to capture Class of Service:</description>
    <label>Class of Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Coach</fullName>
            </value>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>PremiumEconomy</fullName>
                <label>Premium Economy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>