force-app/main/default/objects/Scope_3_Emission_Factor__c/fields/DEFRA_Class__c.field-meta.xml
<CustomField>
    <fullName>DEFRA_Class__c</fullName>
    <description>AJ: Created for NZC Implementation, This field is created to indicate the DEFRA Class Name.</description>
    <label>DEFRA Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Average Class</fullName>
            </value>
            <value>
                <fullName>Business Class</fullName>
            </value>
            <value>
                <fullName>Economy Class</fullName>
            </value>
            <value>
                <fullName>First Class</fullName>
            </value>
            <value>
                <fullName>Premium Economy Class</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>