force-app/main/default/objects/Scope_3_Emission_Factor__c/fields/Emission_Factor_Value_in_Miles__c.field-meta.xml
<CustomField>
    <fullName>Emission_Factor_Value_in_Miles__c</fullName>
    <description>AJ: Created for NZC Implementation, This field is created to capture Emission Factor value in Miles:</description>
    <inlineHelpText>In this field the Emission Factor value is Kept which is in Miles for Rental Car Energy Use.</inlineHelpText>
    <label>Emission Factor (Miles)</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>