force-app/main/default/objects/Scope_3_Emission_Factor__c/fields/Fuel_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Type_Name__c</fullName>
    <description>AJ: Created for NZC Implementation, This field is created to capture Rental Car fuel type Name:</description>
    <label>Fuel Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Electricity</fullName>
            </value>
            <value>
                <fullName>CompressedNaturalGasCNG</fullName>
                <label>Compressed Natural Gas (CNG)</label>
            </value>
            <value>
                <fullName>Gasoline</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>