force-app/main/default/objects/Scope_3_Emission_Factor__c/fields/Ground_Travel_Emissions_Factor__c.field-meta.xml
<CustomField>
    <fullName>Ground_Travel_Emissions_Factor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AJ: Created for NZC Implementation, This field is created to capture Ground Travel Emission Factor Name:</description>
    <label>Ground Travel Emissions Factor</label>
    <referenceTo>GroundTravelEmssnFctr</referenceTo>
    <relationshipLabel>Scope 3 Emission Factors</relationshipLabel>
    <relationshipName>Scope_3_Emission_Factors</relationshipName>
    <type>Lookup</type>
</CustomField>