force-app/main/default/objects/Scope_3_Emission_Factor__c/fields/Haul_Length__c.field-meta.xml
<CustomField>
    <fullName>Haul_Length__c</fullName>
    <description>AJ: Created for NZC Implementation, This field is created to indicate whether the Haul Length is Long, Short or Domestic:</description>
    <label>Haul Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short</fullName>
            </value>
            <value>
                <fullName>Long</fullName>
            </value>
            <value>
                <fullName>Domestic Haul</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>