force-app/main/default/objects/Scope_3_Emission_Factor__c/fields/Hybrid__c.field-meta.xml
<CustomField>
    <fullName>Hybrid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AJ: Created for NZC Implementation, This field is created to capture whether the fuel type is Hybrid or not:</description>
    <inlineHelpText>If this Checkbox is Checked and Fuel Type is Electricity then it Indicates that the Fuel Type is Hybrid.</inlineHelpText>
    <label>Hybrid</label>
    <type>Checkbox</type>
</CustomField>