force-app/main/default/objects/Scope_3_Emission_Factor__c/fields/International__c.field-meta.xml
<CustomField>
    <fullName>International__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AJ: Created for NZC Implementation, This field is created to indicate whether the travel type is international or domestic:</description>
    <label>International</label>
    <type>Checkbox</type>
</CustomField>