force-app/main/default/objects/Scope_3_Emission_Factor__c/fields/Light_Rail_and_Tram__c.field-meta.xml
<CustomField>
    <fullName>Light_Rail_and_Tram__c</fullName>
    <description>AJ: Created for NZC Implementation, This field is created to capture Light Rail and Tram Value:</description>
    <inlineHelpText>If distance is less than 200 KM</inlineHelpText>
    <label>Light Rail and Tram</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>