force-app/main/default/objects/Scope_3_Emission_Factor__c/fields/National_Rail__c.field-meta.xml
<CustomField>
    <fullName>National_Rail__c</fullName>
    <description>AJ: Created for NZC Implementation, This field is created to capture National Rail Value:</description>
    <inlineHelpText>If distance is greater than or equal to 200 KM</inlineHelpText>
    <label>National Rail</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>