force-app/main/default/objects/Scope_3_Emission_Factor__c/fields/Procurement_Emissions_Factor_Set__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Emissions_Factor_Set__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>HA: Created for NZC Implementation, This Field is created to tag the Procurement Emission Factor Set record.</description>
    <label>Procurement Emissions Factor Set</label>
    <referenceTo>PcmtEmssnFctrSet</referenceTo>
    <relationshipLabel>Scope 3 Emission Factors</relationshipLabel>
    <relationshipName>Scope_3_Emission_Factors</relationshipName>
    <type>Lookup</type>
</CustomField>