force-app/main/default/objects/Scope_3_Emission_Factor__c/fields/Procurement_Emissions_Factor_Set_WTT__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Emissions_Factor_Set_WTT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AJ: Created for NZC Implementation, This field is created to capture Procurement Emission Factor Set:</description>
    <label>Procurement Emissions Factor Set WTT</label>
    <referenceTo>PcmtEmssnFctrSet</referenceTo>
    <relationshipLabel>Scope 3 Emission Factors (Procurement Emissions Factor Set WTT)</relationshipLabel>
    <relationshipName>Scope_3_Emission_Factors1</relationshipName>
    <type>Lookup</type>
</CustomField>