force-app/main/default/objects/Scope_3_Emission_Factor__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Venkat: Created as part of NZC Phase 2 Implementation.
Purpose: To capture the status of the Scope 3 Emission Factor.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Pending For Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Revised</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>