force-app/main/default/objects/Scope_3_Emission_Factor__c/fields/UK_Airport__c.field-meta.xml
<CustomField>
    <fullName>UK_Airport__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AJ: Created for NZC Implementation, This field is created to indicate whether the Airport is UK or Non - UK:</description>
    <label>UK Airport</label>
    <type>Checkbox</type>
</CustomField>