force-app/main/default/objects/Scope_3_Emission_Factor__c/fields/WTT_Procurement_Emission_Factor_Set_Year__c.field-meta.xml
<CustomField>
    <fullName>WTT_Procurement_Emission_Factor_Set_Year__c</fullName>
    <description>AJ: Created for NZC Implementation, This field is created to capture the year for which Procurement Emission Factor Set is Created:</description>
    <label>WTT Procurement Emission Factor Set Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>