force-app/main/default/objects/Scope_3_Emission_Factor__c/recordTypes/EPA_Procurement_Emission_Factor.recordType-meta.xml
<RecordType>
    <fullName>EPA_Procurement_Emission_Factor</fullName>
    <active>true</active>
    <description>HA: Created for NZC Implementation. Record type created to store the EPA Procurement Emission factor based on the Category.</description>
    <label>EPA Procurement Emission Factor</label>
</RecordType>