force-app/main/default/objects/Scope_3_Emission_Factor__c/recordTypes/Ground_Travel.recordType-meta.xml
<RecordType>
    <fullName>Ground_Travel</fullName>
    <active>true</active>
    <label>Ground Travel</label>
</RecordType>