force-app/main/default/objects/Scope_3_Emission_Factor__c/recordTypes/Rental_Car.recordType-meta.xml
<RecordType>
    <fullName>Rental_Car</fullName>
    <active>true</active>
    <label>Rental Car</label>
</RecordType>