force-app/main/default/objects/Scope_3_Emission_Factor__c/recordTypes/WTT.recordType-meta.xml
<RecordType>
    <fullName>WTT</fullName>
    <active>true</active>
    <description>AJ: Created for NZC Implementation. Record type created to store the WTT Procurement Emission Factor Set.</description>
    <label>WTT</label>
</RecordType>