force-app/main/default/objects/Scope_3_Emission_Factor__c/listViews/All_List_View.listView-meta.xml
<ListView>
    <fullName>All_List_View</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Air_Travel_Emissions_Factor__c</columns>
    <columns>DEFRA_Class__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Scope 3 Emission Factors</label>
</ListView>